test/libyul/yulSyntaxTests/builtin_identifier_3.yul
{
	function f(x) { f(add) }
}
// ----
// ParserError 7104: (24-25): Builtin function "add" must be called.
